[tool.poetry]
name = "dashboarding"
version = "0.1.0"
description = ""
authors = ["Peter Fiee <peterfiee@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dash = "^2.16.1"
pandas = "^2.2.2"
plotly = "^5.21.0"
dash-bootstrap-components = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
